tests/ui/resolve/issue-21221-4.stderr
error[E0405]: cannot find trait `T` in this scope
  --> $DIR/issue-21221-4.rs:10:6
   |
LL | impl T for Foo {}
   |      ^ not found in this scope
   |
help: consider importing this trait
   |
LL + use issue_21221_4::T;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0405`.
